<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DriverLoginActivity">


    <TextView
        android:id="@+id/tvPassengerLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/tvPassengerlogin"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtPassengerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/EmailHint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtPassengerpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/PasswordHint1"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edtPassengerPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/confirm"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnPassengerLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btnLogin"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvPassengerlink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/tvLink"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnPassengerRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btnRegister"
        android:textSize="20sp" />
</LinearLayout>