<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverLoginActivity"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="146dp"
        android:src="@drawable/phitrack">

    </ImageView>

    <TextView
        android:id="@+id/tv_Deiverlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/tvDriverlogin"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_DriverEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/EmailHint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edt_DriverPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/PasswordHint1"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edt_DriverPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/confirm"
        android:inputType="textPassword"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnDriverLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btnLogin"
        android:textSize="20sp"
        android:backgroundTint="#2196F3"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/tvDriverlink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/tvLink"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="15sp"
        />

    <Button
        android:id="@+id/btnDriverRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:text="@string/btnRegister"
        android:textSize="20sp"
        android:textAllCaps="false"/>
</LinearLayout>